<LinearLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
    android:layout_marginLeft="40dp"
    >  
    <TextView  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:text="@string/hello"/>  
    <TextView  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:text="@string/gender"/>  
    <RadioGroup  
        android:id="@+id/genderGroup"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:orientation="vertical">  
        <RadioButton  
            android:id="@+id/maleBtn"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/male"/>  
        <RadioButton  
            android:id="@+id/femaleBtn"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/female"/>  
    </RadioGroup>  
    <TextView  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:text="@string/hobby"/>  
    <CheckBox  
        android:id="@+id/swim"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:text="@string/swim"/>  
    <CheckBox  
        android:id="@+id/run"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:text="@string/run"/>  
    <CheckBox  
        android:id="@+id/read"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:text="@string/read"/>  
</LinearLayout> 